# architecture-bionicpro

./: docker-compose.yaml
API/: Dockerfile  pyproject.toml
API/src/: main.py  settings.py
API/src/api/: routes.py
API/src/auth/: auth_scheme.py  current_user.py  keycloak_singleton.py
frontend/: package-lock.json  package.json
frontend/components/: ReportPage.tsx
frontend/src/: App.tsx
frontend/src/auth/: pkceUtils.ts
