[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Elizaveta Nikolaeva <elizaveta.nikolaeva@avroid.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
fastapi-keycloak = "^1.1.0"
pydantic-settings = "^2.9.1"
python-keycloak = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
